--- a/css/style.css
+++ b/css/style.css
@@ -2,30 +2,88 @@
     box-sizing: border-box;
 }
 body {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
     font-family: 'Roboto', sans-serif;
     background-color: #eef9bf;
-    align-items: center;
-    
+    align-items: center; 
+    justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+
 
 }
+.card{
+    box-sizing: border-box;
 
+}
+img{
+   position: relative;
+   top: 24px;
+   left:10px; 
+}
 
 .game-tittle {
-    padding-top: 40px;
+    position:fixed;
+    top: 40px;
+    
+    /*padding-top: 40px;*/
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     Font-size: 56px;
     Line-height: 66px;
     Line-height: 100%;
-    align-content: Left;
     Vertical-align: Top;
     letter-spacing: -0.4%;
     color: #75B79E;
 }
 .container {
+    display: none;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:  space-between;
+    width: 100%;
+    height: 100%;
     padding-top: 47px;
+    background-color: red;
     
 }
+.card{
+margin-top: 15px;
+margin-left: auto;
+position: relative;
+top:150px;
+
+width:117px;
+height:146px;
+
+
+border-radius: 5px;
+}
+
+.face {
+    width: 100%;
+    height: 100%;
+    background-color: #A7E9AF;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    backface-visibility: hidden;
+    transition: all .5s;
+    transform-style: preserve-3d;
+  }
+
+  .front-face {
+    transform: rotateY(180deg);
+  }
+
+  .card:hover .front-face {
+    transform: rotateY(0deg);
+  }
+
+  .card:hover .back-face {
+    transform: rotateY(-180deg);
+  } 
