--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,8 @@ margin-top: 15px;
 margin-left: auto;
 position: relative;
 top:150px;
-
 width:117px;
 height:146px;
-
-
 border-radius: 5px;
 }
 
@@ -65,14 +62,14 @@ border-radius: 5px;
     width: 100%;
     height: 100%;
     background-color: #A7E9AF;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 1px 1px 1px rgba(0,0,0,.3);
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
     backface-visibility: hidden;
-    transition: all .5s;
+    transition: all 0.3s linear;
     transform-style: preserve-3d;
   }
 
