--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,10 @@ body {
   font-weight: bold;
   Font-size: 36px;
   background-color: eef9bf;
+
   color: #75B79E;
-  width: 100%;
-  height: 100%;
+  width: 40px;
+  height: 30px;
   position: fixed;
   top:40px;
   left:1100px;
